--- a/Auto_Service/templates/service/facility_list.html
+++ b/Auto_Service/templates/service/facility_list.html
@@ -33,8 +33,8 @@
                             </ul>
                         </div>
                         <a href="{% url 'service:facility_detail' facility.id %}" class="btn btn-primary">View Details</a>
-                        {% if user.is_authenticated %}
-                            <a href="{% url 'service:create_appointment' %}?facility={{ facility.id }}" class="btn btn-outline-primary">Book Appointment</a>
+                        {% if user.is_authenticated and user.baseuser.user_type == 'CUSTOMER' %}
+                            <a href="{% url 'service:create_appointment' %}?facility_id={{ facility.id }}" class="btn btn-outline-primary">Book appointment</a>
                         {% endif %}
                     </div>
                 </div>
