--- a/Auto_Service/templates/service/vehicle_detail.html
+++ b/Auto_Service/templates/service/vehicle_detail.html
@@ -18,18 +18,29 @@
                     {% endif %}
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <p><strong>Make:</strong> {{ vehicle.make }}</p>
-                            <p><strong>Model:</strong> {{ vehicle.model }}</p>
-                            <p><strong>Year:</strong> {{ vehicle.year }}</p>
-                            <p><strong>License Plate:</strong> {{ vehicle.license_plate }}</p>
+                    <div class="row align-items-start">
+                        <div class="col-md-4 mb-3 text-center">
+                            {% if vehicle.image %}
+                                <img src="{{ vehicle.image.url }}" class="img-fluid rounded border" alt="{{ vehicle.make }} {{ vehicle.model }}">
+                            {% else %}
+                                <img src="{% static 'images/Default_Car.jpg' %}" class="img-fluid rounded border" alt="Vehicle image placeholder">
+                            {% endif %}
                         </div>
-                        <div class="col-md-6">
-                            <p><strong>VIN:</strong> {{ vehicle.vin }}</p>
-                            <p><strong>Color:</strong> {{ vehicle.color }}</p>
-                            <p><strong>Mileage:</strong> {{ vehicle.mileage }} km</p>
-                            <p><strong>Registration Date:</strong> {{ vehicle.registration_date|date:"F d, Y" }}</p>
+                        <div class="col-md-8">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <p><strong>Make:</strong> {{ vehicle.make }}</p>
+                                    <p><strong>Model:</strong> {{ vehicle.model }}</p>
+                                    <p><strong>Year:</strong> {{ vehicle.year }}</p>
+                                    <p><strong>License Plate:</strong> {{ vehicle.license_plate }}</p>
+                                </div>
+                                <div class="col-md-6">
+                                    <p><strong>VIN:</strong> {{ vehicle.vin }}</p>
+                                    <p><strong>Color:</strong> {{ vehicle.color }}</p>
+                                    <p><strong>Mileage:</strong> {{ vehicle.mileage }} km</p>
+                                    <p><strong>Registration Date:</strong> {{ vehicle.registration_date|date:"F d, Y" }}</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,24 +90,8 @@
             </div>
         </div>
 
-        <!-- Quick Actions Sidebar -->
+        <!-- Sidebar -->
         <div class="col-lg-4">
-            <div class="card shadow-sm mb-4">
-                <div class="card-header">
-                    <h5 class="mb-0">Quick Actions</h5>
-                </div>
-                <div class="card-body">
-                    <div class="d-grid gap-2">
-                        <a href="{% url 'service:create_appointment' %}?vehicle={{ vehicle.id }}" class="btn btn-primary">
-                            <i class="fas fa-calendar-plus"></i> Schedule Service
-                        </a>
-                        <a href="{% url 'service:dashboard' %}" class="btn btn-outline-secondary">
-                            <i class="fas fa-arrow-left"></i> Back to Dashboard
-                        </a>
-                    </div>
-                </div>
-            </div>
-
             <!-- Maintenance Reminders -->
             <div class="card shadow-sm">
                 <div class="card-header">
